fix: z-index issue

--- a/theme/assets/css/variables.css
+++ b/theme/assets/css/variables.css
@@ -139,4 +139,5 @@
     --theme-z-index-overlay: 10;
     --theme-z-index-megamenu-overlay: 1;
     --theme-z-index-header: 2;
+    --theme-z-index-main: 1;
 }
